--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome from El Boalo!!!
+welcome=Welcome from Madrid city!!!
 required=is required
 notFound=has not been found
 duplicate=is already in use
