NEw wolcem message

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome from Madrid city!!!
+welcome=Welcome from El Boalo!!
 required=is required
 notFound=has not been found
 duplicate=is already in use
